<resources>

    <string name="app_name">SPC</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">Simple Passphrase Creator</string>
    <string name="password">Password</string>
    <string name="passphrase">Passphrase</string>

    <color name="black">#000000</color>
    <color name="soft_blue">#00CCFF</color>
    <color name="gray">#AAAAAA</color>

    <string name="button_label">GENERATE</string>
    <string name="spc_logo">SPC Logo</string>
    <string name="zero">0</string>
    <string name="special_chars">Special Characters</string>
    <string name="numbers">Numbers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <color name="green">#00FF00</color>
    <string name="aboutParagraph">&quot;Simple Passphrase Creator is a free and open source application used to generate passwords and passphrases. The features implemented here were kept to a minimum on purpose to promote simplicity. You can read more about the strength and complexity of the generated passwords by visiting my website. The souce code can be found there as well. Thank you. &quot;</string>
    <string name="aboutLabel">About</string>
    <string name="siteLink">http://www.relabit.com</string>
    <string name="authorsName">Benjamin S. Newell</string>
    <string name="menu_refresh">Refresh</string>
    <color name="white">#FFFFFF</color>
    <color name="dark_gray">#777777</color>

</resources>