<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/spc_logo"
            android:src="@drawable/spcabout" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/soft_blue"
            android:textSize="28dp"
            android:layout_marginTop="15dp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="5dp"
            android:text="@string/aboutParagraph"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray"
            android:textColorLink="@color/soft_blue"
            android:textSize="18dp"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/authorsName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/siteLink"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/soft_blue"
            android:textColorLink="@color/soft_blue" />

    </RelativeLayout>

</ScrollView>